# OpenAirInterface-FlexRIC

./: README.md
flexric/: CMakeCache.txt  CMakeLists.txt
flexric/OAI_WS_M5G_fall_2021/oai_m5g_lab2_sdk_xapp/: LICENSE  README.md  e42ap.txt  requirements.txt  setup.cfg
flexric/OAI_WS_M5G_fall_2021/oai_m5g_lab2_sdk_xapp/data/: context.pkl
flexric/oai/: gnb.band78.tm1.fr1.106PRB.usrpb210.conf  gnb.band78.tm1.fr1.106PRB.usrpb210.conf.backup  gnb.band78.tm1.fr1.106PRB.usrpb210.conf.openxg
flexric/src/lib/: pending_events.c
flexric/src/lib/ap/ie/asn/: e2ap-v01.01.asn1
flexric/src/ric/: msg_handler_ric.c  near_ric.c  near_ric_api.c  near_ric_api.h
flexric/src/ric/iApps/: influx.c  redis.c  stdout.c  string_parser.c  string_parser.h
flexric/src/ric/iApps/nng/: notify_nng_listener.c  req_reply.c  req_reply.h
flexric/src/ric/iApps/nng/msgs/: xapp_msgs.h
flexric/src/sm/: CMakeLists.txt
flexric/src/sm/agent_if/ans/: sm_ag_if_ans.h
flexric/src/sm/agent_if/read/: sm_ag_if_rd.h
flexric/src/sm/agent_if/write/: mcs_wr_ctrl.h  sm_ag_if_wr.h
flexric/src/sm/mcs_sm/: CMakeLists.txt  mcs_sm_agent.c  mcs_sm_agent.h  mcs_sm_id.h  mcs_sm_ric.c  mcs_sm_ric.h
flexric/src/sm/mcs_sm/dec/: mcs_dec_asn.c  mcs_dec_asn.h  mcs_dec_fb.c  mcs_dec_fb.h  mcs_dec_generic.h  mcs_dec_plain.c  mcs_dec_plain.h
flexric/src/sm/mcs_sm/enc/: mcs_enc_asn.c  mcs_enc_asn.h  mcs_enc_fb.c  mcs_enc_fb.h  mcs_enc_generic.h  mcs_enc_plain.c  mcs_enc_plain.h
flexric/src/sm/mcs_sm/ie/: mcs_control_ie.c  mcs_control_ie.h
flexric/src/sm/mcs_sm/test/: CMakeLists.txt  main.c
flexric/test/: ric_sa.c  test_near_ric.c
openairinterface5g/ci-scripts/conf_files/: gnb.band78.sa.fr1.106PRB.usrpn310.conf
openairinterface5g/cmake_targets/: CMakeLists.txt
openairinterface5g/executables/: nr-softmodem.c  softmodem-common.c
openairinterface5g/executables/agent_if/ans/: sm_ag_if_ans.h
openairinterface5g/executables/agent_if/ie/: mac_data_ie.h
openairinterface5g/executables/agent_if/read/: sm_ag_if_rd.c  sm_ag_if_rd.h
openairinterface5g/executables/agent_if/write/: sm_ag_if_wr.h
openairinterface5g/openair2/LAYER2/NR_MAC_COMMON/: nr_mac_extern.h
openairinterface5g/openair2/LAYER2/NR_MAC_gNB/: gNB_scheduler.c  gNB_scheduler_dlsch.c  gNB_scheduler_ulsch.c  main.c  nr_mac_gNB.h
openairinterface5g/openair2/LAYER2/nr_pdcp/: nr_pdcp_entity.c  nr_pdcp_entity.h  nr_pdcp_oai_api.c
openairinterface5g/openair2/LAYER2/nr_rlc/: nr_rlc_entity.c  nr_rlc_entity.h  nr_rlc_entity_am.c  nr_rlc_entity_um.c  nr_rlc_oai_api.c
openairinterface5g/targets/PROJECTS/GENERIC-NR-5GC/CONF/: gnb.sa.band78.fr1.106PRB.2x2.usrpx310.conf  gnb.sa.band78.fr1.106PRB.2x2.usrpx310.conf.openxg  gnb.sa.band78.fr1.106PRB.usrpb210.conf.oai  gnb.sa.band78.fr1.106PRB.usrpb210.conf.openxg  gnb.sa.band78.fr1.106PRB.usrpb210.conf.openxg.breif  gnb.sa.band78.fr1.106PRB.usrpx310.conf.openxg  gnb.sa.band78.fr1.162PRB.2x2.usrpx310.conf
