[metadata]
name = oai-m5g-sdk
version = 0.0.1
author = Hung NGUYEN
author_email = hung.nguyen@openairinterface.org 
description = SDK for OAI-Mosaic5g platform 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src